--- a/css/docco.css
+++ b/css/docco.css
@@ -90,6 +90,9 @@ table td {
       font-size: 12px;
       padding: 0 0.2em;
     }
+    .docs ul {
+      padding-left: 1.5em;
+    }
     .pilwrap {
       position: relative;
     }
