--- a/css/style.less
+++ b/css/style.less
@@ -1,15 +1,16 @@
 @import "response";
+@import "../vendor/lesshat/build/lesshat";
 
-@colorish: #6495ed;
 @logo-text: #000000;
 @body-text: lighten(#000000, 10%);
-@welcome-font: "ABeeZee";
-@heading-font: "Inconsolata";
-@body-font: "Helvetica";
-@code-font: "Oxygen Mono";
+
+@font-face {
+    font-family: 'Crystal';
+    src: url('CRYSRG__.TTF');
+}
 
 html {
-    background: darken(#ffffff, 3%);
+    background: darken(#ffffff, 1%);
     font-size: 100%;
     color: @body-text;
 }
@@ -18,6 +19,7 @@ body {
     font-family: Helvetica;
     margin: 0 auto;
     padding: 0 0;
+    font-size: 75%;
 }
 
 img {
@@ -26,7 +28,7 @@ img {
 
 .container {
     /* Whatever you want. They’re your oats. */
-    max-width: 60em;
+    max-width: 70em;
     margin: 0 auto;
     padding: 0 0;
 }
@@ -34,12 +36,21 @@ img {
 .unit.welcome {
     .span-grid;
     h1 {
-        font-family: @welcome-font,  "Georgia", sans-serif;
+        font-family: "Sorts Mill Goudy",  "Helvetica", sans-serif;
         /*font-size: 48pt;*/
-        font-weight: normal;
         font-size: 72pt;
         margin-top: 0.5em;
         margin-bottom: 0.25em;
+    }
+    h3 {
+        margin-top: 1em;
+    }
+    p {
+        font-family: "Questrial", "Helvetica", sans-serif;
+        font-size: 18pt;
+        margin-bottom: 1em;
+        margin-left: 1em;
+        margin-right: 1em;
     }
 }
 
@@ -55,45 +66,49 @@ img {
 }
 
 .unit.description {
-    font-family: @body-font, "Raleway", "Merriweather", "Maven Pro", "Helvetica", serif;
+    font-family: Helvetica, 'Mate', "Raleway", "Merriweather", "Maven Pro", "Helvetica", serif;
     p {
         font-size: 1.45em;
+        line-height: 1.75em;
         margin: 1em 0;
         /* todo: not working in chrome */
         font-weight: 100;
         strong {
-            font-weight: 700;
+            font-weight: 500;
         }
     }
     ul {
         font-size: 1.45em;
+        line-height: 1.5em;
+        font-weight: 100;
         margin: 1em 0;
         padding-left: 2em;
+        li {
+            margin: 1em 0;
+        }
     }
     h2 {
-        font-family: @heading-font;
-        font-weight: normal;
+        font-family: "Sorts Mill Goudy";
         font-size: 2em;
         font-style: italic;
-        margin: 1em 0;
+        margin: 2em 0 1em 0;
     }
     h3 {
-        font-family: @heading-font;
-        font-weight: normal;
+        font-family: "Sorts Mill Goudy";
+        margin: 2em 0 1em 0;
         font-size: 1.5em;
     }
-    a {
-        color: #4682b4;
-    }
-    a:visited {
-        color: #9370db;
-    }
-    p code {
-        font-family: @code-font;
-        font-size: 0.85em;
+    li code, p code {
+        font-family: 'Courier New';
+        font-size: 1.05em;
+        letter-spacing: -1px;
         background: white;
         padding: 0 0.25em;
         border: 1px dotted #ccc;
+    }
+    pre {
+        border: 1px dotted #ccc;
+        padding: 0.5em 1em;
     }
 }
 
@@ -123,13 +138,19 @@ img {
     .highlight > pre {
         margin: 2em 0;
         padding: 1em;
-        font-size: 1.15em;
-        font-family: @code-font, 'Monaco', 'Cutive Mono', 'Oxygen Mono', monospace;
+        font-weight: normal;
+        font-size: 1.25em;
+        font-family: 'Courier New', 'Monaco', 'Oxygen Mono', 'Crystal', 'Cutive Mono', 'Oxygen Mono', monospace;
     }
 }
 
 .unit.sidebar {
     .one-of-four;
+}
+
+.highlight .c1 {
+    font-style: normal;
+    color: blue;
 }
 
 /* vim: set ts=4 sw=4: */
